--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EnterpriseNCC1701X"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="550" Width="1000">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="52*"/>
+            <RowDefinition Height="37*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="72*"/>
+            <ColumnDefinition Width="73*"/>
+            <ColumnDefinition Width="55*"/>
+        </Grid.ColumnDefinitions>
+        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,10,10,10" Grid.Column="1"/>
+        <ListView d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,10,10,10">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <TextBox HorizontalAlignment="Left" Margin="10,91,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox HorizontalAlignment="Left" Margin="10,123,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox HorizontalAlignment="Left" Margin="10,152,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Height="18"/>
+        <Button Content="Добавить" HorizontalAlignment="Left" Margin="148,37,0,0" Grid.Row="1" VerticalAlignment="Top" Height="20" Width="67"/>
+        <TextBox HorizontalAlignment="Left" Margin="10,37,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="19,28,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="19,64,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Height="18"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="19,0,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Width="120" Height="18"/>
+        <Button Grid.Column="1" Content="Button" HorizontalAlignment="Center" Margin="0,27,0,0" Grid.Row="1" VerticalAlignment="Top" Height="20" Width="40"/>
+        <Button Content="Добавить" HorizontalAlignment="Left" Margin="148,89,0,0" Grid.Row="1" VerticalAlignment="Top" Height="20" Width="67"/>
+        <ComboBox HorizontalAlignment="Left" Margin="230,18,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" Height="22"/>
+        <Button Content="Сохранение" HorizontalAlignment="Left" Margin="10,9,0,0" Grid.Row="1" VerticalAlignment="Top" Height="20" Width="92" Grid.Column="2"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,13,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top"><Run Language="ru-ru" Text="Добавление изделия"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="10,69,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top"><Run Language="ru-ru" Text="Добавление материала"/></TextBlock>
+        <ListBox Grid.Column="2" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,10,10,10"/>
+
     </Grid>
 </Window>
